<resources>
    <string name="app_name">Meal Now!</string>

    <string name="tab_public">PUBLIC</string>
    <string name="tab_me">ME</string>

    <string name="near_text">Near:</string>
    <string name="offer_text">\"Let\'s meet and eat %1$s\"</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="prompt_login_text">Continue to your account</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="google_sign_in">Sign in with Google</string>

</resources>
