<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_fragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.fragment.LoginChoiceFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="42dp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/logo_marginBottom"
        android:background="@android:color/white"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/button_sign_up"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:text="@string/sign_up" />

    <Button
        android:id="@+id/button_sign_in"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:text="@string/sign_in" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/activity_vertical_margin" />

</LinearLayout>
